--- a/syarat.html
+++ b/syarat.html
@@ -73,9 +73,9 @@
     <h1>Syarat Pendaftaran</h1>
     <table>
       <tr>
-        <th>No</th>
-        <th>Syarat</th>
-        <th>Keterangan</th>
+        <th>NO</th>
+        <th>PERSYARATAN</th>
+        <th>KETERANGAN</th>
       </tr>
       <tr>
         <td>1</td>
@@ -84,18 +84,48 @@
       </tr>
       <tr>
         <td>2</td>
-        <td>Fotokopi Kartu Keluarga</td>
+        <td>Mengisi formulir pendaftaran online/offline</td>
         <td>Wajib</td>
       </tr>
       <tr>
         <td>3</td>
-        <td>Fotokopi Akta Kelahiran</td>
+        <td>FotoCopy Ijazah SKHUN NISN (4 lembar)</td>
         <td>Wajib</td>
       </tr>
       <tr>
         <td>4</td>
-        <td>Pas Foto 3x4 (2 lembar)</td>
+        <td>Pas Foto 3x4 (4 lembar)</td>
         <td>Wajib</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>FotoCopy KTP Orang Tua/Wali (4 lembar)</td>
+        <td>Wajib</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>FotoCopy Akte kelahiran (4 lembar)</td>
+        <td>Wajib</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>FotoCopy Kartu keluarga (4 lembar)</td>
+        <td>Wajib</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>FotoCopy KIS KIP (4 lembar)</td>
+        <td>Bila Punya</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>Materai Rp.10.000</td>
+        <td>Wajib</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>Map Biru/Merah</td>
+        <td>Biru : Laki-laki | Merah : Perempuan</td>
       </tr>
     </table>
     <a href="index.html" class="back-btn">Kembali ke Beranda</a>
