--- a/syarat.html
+++ b/syarat.html
@@ -25,14 +25,9 @@
       display: inline-block;
       margin-top: 80px;
     }
-    h1 {
-      font-family: 'Scheherazade New', serif;
-      font-size: 40px;
-      animation: jumpColor 2s infinite;
-    }
-    @keyframes jumpColor {
-      0%, 100% { color: white; }
-      50% { color: gold; }
+    .logo {
+      width: 150px;
+      margin-bottom: 20px;
     }
     table {
       width: 100%;
@@ -70,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Syarat Pendaftaran</h1>
+    <img src="logo.png" alt="Logo Ponpes At-Taufiq" class="logo">
     <table>
       <tr>
         <th>NO</th>
