--- a/syarat.html
+++ b/syarat.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Logo Ponpes At-Taufiq" class="logo">
+    <img src="IMG_20250402_185237.png" alt="Logo Ponpes At-Taufiq" class="logo">
     <table>
       <tr>
         <th>NO</th>
