--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <h1>AT-TAUFIQ</h1>
     <h3>Bogem Grogol Diwek Jombang</h3>
     <div class="buttons">
-      <a href="#">PSB Online</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzSEfwcwN__3z9TJOcHfaig2iS4F-nwFxlwk6ZomKwhBpxCw/viewform?pli=1">PSB Online</a>
     </div>
   </div>
   <footer>
