--- a/syarat.html
+++ b/syarat.html
@@ -61,6 +61,14 @@
     .back-btn:hover {
       background: darkgoldenrod;
     }
+    footer {
+      margin-top: 50px;
+      color: #ccc;
+      font-size: 14px;
+    }
+    footer i {
+      margin-right: 5px;
+    }
   </style>
 </head>
 <body>
@@ -125,5 +133,11 @@
     </table>
     <a href="index.html" class="back-btn">Kembali ke Beranda</a>
   </div>
+  
+  <footer>
+    <p><i class="fas fa-map-marker-alt"></i> Ponpes At-Taufiq, Jl. Pesantren No.123, Indonesia</p>
+    <p><i class="fas fa-phone-alt"></i> 0812-3456-7890 | <i class="fas fa-envelope"></i> info@attaufiq.sch.id</p>
+    <p>&copy; 2025 Ponpes At-Taufiq.</p>
+  </footer>
 </body>
 </html>
