--- a/syarat.html
+++ b/syarat.html
@@ -135,9 +135,9 @@
   </div>
   
   <footer>
-    <p><i class="fas fa-map-marker-alt"></i> Ponpes At-Taufiq, Jl. Pesantren No.123, Indonesia</p>
-    <p><i class="fas fa-phone-alt"></i> 0812-3456-7890 | <i class="fas fa-envelope"></i> info@attaufiq.sch.id</p>
-    <p>&copy; 2025 Ponpes At-Taufiq.</p>
+    <p><i class="fas fa-map-marker-alt"></i> Jl.KH.Shobari No.48B Bogem, Grogol, Diwek, Jombang</p>
+    <p><i class="fas fa-phone-alt"></i> +62 856-4637-6653 | <i class="fas fa-envelope"></i> info@attaufiq.sch.id</p>
+    <p>&copy; 2025 Ponpes At-Taufiq</p>
   </footer>
 </body>
 </html>
