--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
   <nav class="menu" id="menu">
     <span class="close-btn" onclick="toggleMenu()">&times;</span>
     <ul>
-      <li><a href="#">Beranda</a></li>
-      <li><a href="#">Biaya Pendaftaran</a></li>
-      <li><a href="syarat.html">Syarat Pendaftaran</a></li>
+      <li><a href="#">BERANDA</a></li>
+      <li><a href="#">ADMINISTRASI</a></li>
+      <li><a href="syarat.html">SYARAT PENDAFTARAN</a></li>
       <li>
-        <a href="#" onclick="toggleSubmenu(event)">Kontak</a>
+        <a href="#" onclick="toggleSubmenu(event)">KONTAK</a>
         <div class="submenu" id="contact-submenu">
-          <a href="https://wa.me/6281234567890" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-          <a href="https://instagram.com/ponpesattaufiq" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-          <a href="mailto:info@attaufiq.sch.id"><i class="fas fa-envelope"></i> Email</a>
-          <a href="https://t.me/attaufiq" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
+          <a href="https://wa.me/6285646376653" target="_blank"><i class="fab fa-whatsapp"></i> | WHATSAPP</a>
+          <a href="https://www.instagram.com/attaufiq_bogem?igsh=MTZ4OTNxZmMxOWQ5MQ==" target="_blank"><i class="fab fa-instagram"></i> | INSTAGRAM</a>
+          <a href="mailto:attaufiqbogem@gmail.com"><i class="fas fa-envelope"></i> | EMAIL</a>
+          <a href="https://t.me/attaufiqbogem_bot" target="_blank"><i class="fab fa-telegram"></i> | TELEGRAM</a>
         </div>
       </li>
     </ul>
