--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <nav class="menu" id="menu">
     <span class="close-btn" onclick="toggleMenu()">&times;</span>
     <div class="logo-in-menu">
-      <img src="logo.png" alt="Logo Ponpes">
+      <img src="IMG_20250402_185237.png" alt="Logo Ponpes">
     </div>
     <ul>
       <li><a href="#">BERANDA</a></li>
