--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ponpes At-Taufiq</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@700&family=Poppins:wght@400;600&family=Lobster&display=swap" rel="stylesheet"/>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: 'Poppins', sans-serif; }
@@ -31,6 +31,13 @@
       z-index: 1100;
       position: relative;
       transition: transform 0.3s;
+      font-family: 'Lobster', cursive;
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: scale(0.5); }
+      100% { opacity: 1; transform: scale(1); }
     }
 
     .menu-icon:hover {
@@ -87,9 +94,20 @@
     }
 
     .menu ul li a {
-      color: white;
+      color: black;
       text-decoration: none;
       font-size: 18px;
+      background-color: gold;
+      padding: 10px;
+      display: block;
+      border-radius: 8px;
+      text-align: center;
+      transition: 0.3s;
+    }
+
+    .menu ul li a:hover {
+      background-color: darkgoldenrod;
+      color: white;
     }
 
     .close-btn {
@@ -110,6 +128,16 @@
       display: block;
       font-size: 16px;
       margin: 5px 0;
+      background-color: gold;
+      padding: 8px;
+      border-radius: 5px;
+      text-align: center;
+      color: black;
+    }
+
+    .submenu a:hover {
+      background-color: darkgoldenrod;
+      color: white;
     }
 
     .main-content {
@@ -176,7 +204,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <img src="IMG_20250402_185237.png" alt="AT-TAUFIQ">
+      <img src="IMG_20250402_185237.png" alt="AT-TAUFIQ"/>
     </div>
     <div class="menu-icon" onclick="toggleMenu()">
       <i class="fas fa-bars"></i>
@@ -186,7 +214,7 @@
   <nav class="menu" id="menu">
     <span class="close-btn" onclick="toggleMenu()">&times;</span>
     <div class="logo-in-menu">
-      <img src="IMG_20250402_185237.png" alt="Logo Ponpes">
+      <img src="IMG_20250402_185237.png" alt="Logo Ponpes"/>
     </div>
     <ul>
       <li><a href="#">BERANDA</a></li>
@@ -221,6 +249,7 @@
       var menu = document.getElementById("menu");
       menu.classList.toggle("active");
     }
+
     function toggleSubmenu(event) {
       event.preventDefault();
       var submenu = document.getElementById("contact-submenu");
