--- a/syarat.html
+++ b/syarat.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,15 +18,18 @@
       color: white;
       text-align: center;
       padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     .container {
       background: rgba(0, 0, 0, 0.8);
       padding: 20px;
       border-radius: 10px;
-      display: inline-block;
-      margin-top: 50px;
-      max-width: 800px;
-      width: 100%;
+      display: block;
+      margin: 50px auto;
+      max-width: 90%;
+      width: 800px;
     }
     .logo {
       width: 150px;
@@ -35,6 +37,7 @@
     }
     .table-wrapper {
       overflow-x: auto;
+      max-width: 100%;
     }
     table {
       width: 100%;
@@ -118,9 +121,7 @@
       </table>
     </div>
     <a href="index.html" class="back-btn">Kembali ke Beranda</a>
-  </div>
-  
-  <footer>
+  </div>  <footer>
     <p><i class="fas fa-map-marker-alt"></i> Jl.KH.Shobari No.48B Bogem, Grogol, Diwek, Jombang</p>
     <p><i class="fas fa-phone-alt"></i> +62 856-4637-6653 | <i class="fas fa-envelope"></i> attaufiq@gmail.com</p>
     <p>&copy; 2025 Ponpes At-Taufiq</p>
