--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@700&family=Poppins:wght@400;600&family=Lobster&display=swap" rel="stylesheet"/>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: 'Poppins', sans-serif; }.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: rgba(0, 0, 0, 0.8);
-  padding: 15px 20px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1000;
-}
-
-.logo-container {
+    body { font-family: 'Poppins', sans-serif; }
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 15px 20px;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+    }.logo-container {
   display: flex;
   align-items: center;
 }
@@ -38,7 +37,9 @@
   color: white;
   cursor: pointer;
   z-index: 1100;
+  transition: transform 0.3s;
 }
+.menu-icon:hover { transform: scale(1.2); }
 
 .menu {
   position: fixed;
@@ -54,11 +55,6 @@
 }
 
 .menu.active { right: 0; }
-
-.menu .logo-in-menu {
-  text-align: center;
-  margin-bottom: 20px;
-}
 
 .menu ul {
   list-style: none;
@@ -76,7 +72,6 @@
   text-align: center;
   transition: 0.3s;
 }
-
 .menu ul li a:hover {
   background-color: darkgoldenrod;
   color: white;
@@ -94,6 +89,28 @@
   padding: 20px;
   background: url('background.png') no-repeat center center/cover;
 }
+
+.main-content h1 {
+  font-family: 'Scheherazade New', serif;
+  font-size: 60px;
+  animation: jumpColor 2s infinite;
+}
+
+@keyframes jumpColor {
+  0%, 100% { transform: translateY(0); color: white; }
+  25%, 75% { transform: translateY(-10px); color: gold; }
+}
+
+.buttons a {
+  padding: 12px 20px;
+  background: gold;
+  color: black;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+.buttons a:hover { background: darkgoldenrod; }
 
 footer {
   background-color: #222;
